--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -35,3 +35,12 @@ header{
 .singInBtn:hover{
     background-color: var(--btn-links);
 }
+
+.clock{
+    font-size: 2rem;
+    font-weight: 500;
+    margin-left: -140px;
+    border: 2px solid var(--accent-color);
+    padding: 0 10px;
+    border-radius: 10px;
+}
