--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -40,6 +40,15 @@ h1,h2,h3,h4,h5,h6,p{
   margin: 0;
 }
 
+ul{
+  padding: 0;
+  margin: 0;
+}
+
+li{
+  list-style-type: none;
+}
+
 .container {
   max-width: 1600px;
   width: 90%;
